Revert "Items change"
This reverts commit 27996f9da68612939a97724b0cee29942d2eec2b.

--- a/begin.html
+++ b/begin.html
@@ -6,10 +6,10 @@
 <body>
 	<h1>WElcome to web</h1>
 	<ul>
-		<li>Curry</li>
-		<li>Roast</li>
-		<li>Graey</li>
-		<li>Chutney</li>
+		<li>Item1</li>
+		<li>Item2</li>
+		<li>Item3</li>
+		<li>Item4</li>
 	</ul>
 </body>
 </html>
